# radem

./: README.md  pyproject.toml
radem/: __init__.py
radem/events/: __init__.py  background.py  onset.py
radem/examples/: onset_detection.ipynb
src/radem/: __init__.py
src/radem/events/: __init__.py  background.py  onset.py
src/radem/examples/: data_conversions.ipynb  total_gcr_dose.ipynb
src/radem/handlers/: __init__.py  csv_handler.py  hdf_handler.py  irem_cdf_handler.py  radem_cdf_handler.py
src/radem/loaders/: __init__.py  cdf_loader.py  csv_loader.py  hdf_loader.py
src/radem/loaders/irem/: __init__.py  cdf_loader.py  hdf_loader.py
