[project]
name = "radem"
version = "0.1.0"
description = "A library for visualisation and analysis of RADEM related data."
authors = [
    { name = "Leszek Grzanka", email = "leszek.grzanka@ifj.edu.pl" },
    { name = "Krzysztof Pęczek", email = "peczek.kr@gmail.com"},
    { name = "Szymon Bednorz", email = "sbednorz@student.agh.edu.pl"}
]

dependencies = [
    "pandas>=1.3.0",
    "spacepy>=0.2.1",
    "numpy>=1.21.0",
    "h5py>=3.12.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"